--- a/index.html
+++ b/index.html
@@ -1,1 +1,132 @@
 <!DOCTYPE html>
+   <html>
+    <head>
+    <meta charset="utf-8">  
+    <title>Sedona</title>
+   </head>
+   <body>
+       <header> 
+           <nav>
+               <div>
+                   <ul>
+                       <li>
+                           <a>нформация</a>
+                       </li>
+                       <li>
+                           <a>фото и видео</a>
+                       </li>
+                       <li>
+                           <a>карта штата</a>
+                       </li>
+                       <li>
+                           <a>гостиницы</a>
+                       </li>
+                   </ul>
+               </div>
+           </nav>
+       </header>
+       <main>
+           <div>
+               <span>
+                   <p>Sedona</p>
+                   <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTJB_Ww77xZMlTTMPxcGLlFVbQY3W7O0l8DKZqJEgaKgWw7_bz1&usqp=CAU">
+               </span>
+           </div>
+           <div>
+               <h1>
+                cедона - небольшой городок в 
+                aризоне,<br>
+                заслуживающий большего! 
+               </h1> 
+               <p>
+                Рассмотрим 5 причин, по которым
+                Седона круче, чем гранд каньон!
+               </p>              
+           </div>
+        <section>
+           <div>
+               <div>
+                   <div>
+                       <p>настоящий<br>
+                        городок</p>
+                        <p>№1</p>
+                        <p>седона-не атракцион для туристов,<br>
+                        там течет своя жизнь</p>
+                   </div>
+                   <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcRgwII3ES_I-CqkIgkRrtQ9v45eUFHoc3HqWjUqSIY9QDRsipHA&usqp=CAU">
+               </div>
+               <div>
+                   <div>
+                       <p>ЖИЛЬЕ</p>
+                       <p>рекомендуем пожить в настоящем <br>
+                       мотеле, всё как в кино!</p>
+                   </div>
+                   <div>
+                       <p>ЕДА</p>
+                       <p>ВСЕГДА ЗАКАЗЫВАЙТЕ ФИРМЕННЫЙ БУРГЕР,<br>
+                       ВЫ НЕ РАЗОЧАРУЙТЕСЬ!</p>
+                   </div>
+                   <div>
+                       <p>СУВЕНИРЫ</p>
+                       <P>НЕ ТОЛЬКО КИТАЙСКОГО, НО И МЕСНОГО<br>
+                       ПРОИЗВОДСТВА</P>
+                   </div>
+               </div>
+           </div>
+        </section>   
+        <section>
+            <div>
+                <div>
+                    <div>
+                        <p>ТАМ ЕСТЬ<br>
+                        МОСТ ДЬЯВОЛА</p>
+                        <p>- №2 -</p>
+                        <p>ДА, ПО НЕМУ МОЖНО ПРОЙТИ! ЕСЛИ КОНЕЧНО<br>
+                        ВЫ ОСМЕЛИТЕСЬ </p>
+                    </div>
+                    <div>
+                        <p>НЕБОЛЬШАЯ<br>
+                         ПЛОЩАДЬ</p>
+                         <P>- №3 -</P>
+                        <p>ВСЕ ДОСТОПРИМЕЧАТЕЛЬНОСТИ<br>
+                        НАХОДЯТСЯ ОЧЕНЬ БЛИЗКО</p>
+                    </div>
+                    <div>
+                        <p>КРАСИВАЯ ДОРОГА</p>
+                        <p>- №4 -</p>
+                        <p>ЕХАТЬ В СЕДОНУ ИЗ ЛАС-ВЕГАСА СОВСЕМ<br>
+                        НЕ СКУЧНО!</p>
+                    </div>
+                    <div>
+                        <p>МАЛО <br> 
+                        ТУРИСТОВ</p>
+                        <p>- №5 -</p>
+                        <p>БОЛЬШИНСТВО ЕДЕТ В ГРАНД КАНЬОН<br>
+                        И ТОЛПИТСЯ ТАМ</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div>
+                <p>ЗАИНТЕРЕСОВАЛИСЬ?</p>
+                <p>УКАЖИТЕ ПРЕДПОЛОГАЕМЫЕ ДАТЫ ПОЕЗДКИ,<br>
+                И МЫ ПОКАЖЕМ ВАМ ЛУЧШЕ ПРЕДЛОЖЕНИЕ ГОСТИНИЦЫ В СЕДОНЕ </p>
+                <button>ПОИСК ГОСТИНИЦЫ В СЕДОНЕ </button>
+            </div>
+        </section>
+        <footer>
+            <div>
+                <p>#VISITSEDONA</p>
+            </div>
+            <div>
+                <a>ссылка на twitter</a><br>
+                <a>ссылка на faccebok</a><br>
+                <a>ссылка на  YouTube</a><br>
+            </div>
+            <p>Website by</p>
+        </footer>
+       </main>
+   </body>
+
+ </html> 
